# mirage

./: .env.example  .gitattributes  .gitignore  CITATION.cff  README.md  gemma2b_mirage_aware_training_eval_colab.ipynb  mirage_aware_base_eval.ipynb  mirage_aware_qwen_balanced_ablation.ipynb  qwen_mirage_aware_training_eval_colab.ipynb
apps/narrator/: README.md  pyproject.toml
apps/narrator/examples/: export_session.sh
apps/narrator/frontend/: app.js  index.html  style.css
apps/narrator/narrator/: __init__.py  engine.py  generator.py  guard.py  schemas.py  server.py  session.py
projects/rhun/: .gitignore  AGENTS.md  README.md  RHUN_CONTEXT.md  RHUN_CONTEXT_v2.md  RHUN_CONTEXT_v3.md  RHUN_CONTEXT_v4.md  pyproject.toml
projects/rhun/experiments/: README.md  run_approximation_ratio.py  run_beam_search_sweep.py  run_bvag_evaluation.py  run_commit_latency.py  run_context_algebra_suite.py  run_context_retention_sweep.py  run_exogenous_tp.py  run_exp58_pivot_shift_witness.py  run_fn_divergence_analysis.py  run_fp8_diagnosis.py  run_gap_adversarial.py  run_kj_boundary_clean.py  run_kj_boundary_final.py  run_layer3_anticorrelation.py  run_multiburst_comparison.py  run_multiburst_diagnostic.py  run_multiburst_gap.py  run_oracle_diff.py  run_organic_confirmation.py  run_organic_oscillation.py  run_oscillation_trap.py  run_pool_barrier.py  run_pool_bottleneck_diagnosis.py  run_population_a_violations.py  run_position_sweep.py  run_prefix_dominance_test.py  run_scale_dependence.py  run_smart_policies.py  run_success_envelope.py  run_swap_distance.py  run_tp_solver_pool_diagnosis.py  run_truncation_shadow.py  run_valley_of_death.py  run_viability_characterization.py  run_weight_fp_diagnosis.py  verify_bvag.py
projects/rhun/paper/: BUILD_NOTES.md  README.md  context_algebra_endogenous_semantics_draft.tex  finite_absorbing_states.tex  generate_figures.py  generate_streaming_figures.py  interactive_paper_explainer.html  main.tex  main.txt  main_v3_reviewed.tex  main_v4_reviewed.tex  references.bib  (+3 more)
tropical-compactor/: .gitignore  README.md  benchmark_harness.py  compactor.py  pyproject.toml  server.py  tagger.py
tropical-compactor/scripts/: analyze_telemetry.py  full_validation.sh  replay_cyberops_mcp.py  run_full_validation.py
tropical-compactor/tests/: test_algebra.py  test_algebra_properties.py  test_benchmark_harness.py  test_compactor.py  test_server_tools.py  test_tagger.py
(+507 files in other folders)
