[project]
name = "tropical-compactor"
version = "0.1.0"
description = "FastMCP server for L2 tropical-algebra context compaction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tropical-compactor = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "README.md",
  "pyproject.toml",
  "tests/*.py",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
