[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrator"
version = "0.1.0"
description = "Mirage-guarded interactive fiction scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
]

[project.optional-dependencies]
lorien = []

[tool.setuptools.packages.find]
where = ["."]
include = ["narrator*"]
