[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrativefield"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.4,<3.0",
  "anthropic>=0.78,<1.0",
  "fastapi>=0.128,<1.0",
  "uvicorn>=0.40,<1.0",
  "openai>=2.17,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10.0",
  "ruff>=0.15,<1.0"
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["narrativefield/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["narrativefield*"]
